<resources>
    <string name="app_name">DonationTracker</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_password_verify">Password (Verify)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_username_already_exists">A profile with this username already exists</string>
    <string name="error_password_mismatch">Must match password</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing username
        completions."
    </string>
    <string name="welcome_string">Welcome to the Donation Tracker!</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome_button_to_login">Login</string>
    <string name="welcome_button_to_register">Register</string>
    <string name="logout_button">Logout</string>
    <string name="back_button">Back</string>
    <string name="register_header_text">Register</string>
    <string name="invalid_auth_token">Session invalid, please log back in</string>
    <string name="password_strength_very_weak">Strength: Very Weak</string>
    <string name="password_strength_weak">Strength: Weak</string>
    <string name="password_strength_average">Strength: Average</string>
    <string name="password_strength_strong">Strength: Strong</string>
    <string name="password_strength_very_strong">Strength: Very Strong</string>
    <string name="post_login_welcome_string">Welcome %1$s %2$s!</string>

    <string name="to_tools_button">Admin Tools</string>
    <string name="to_map_button">Map</string>

    <string name="location_name">Name: %1$s</string>
    <string name="location_latitude">Latitude: %1$s</string>
    <string name="location_longitude">Longitude: %1$s</string>
    <string name="location_type">Type: %1$s</string>
    <string name="location_address">Address: %1$s</string>
    <string name="location_phone">Phone: %1$s</string>
    <string name="location_dialog_close_button">Close</string>

    <string name="tools_add_donation">Add Donation</string>
    <string name="tools_view_donations">View Donations</string>

    <string name="donation_add_header">Enter Donation Info</string>
    <string name="donation_name_prompt">Name</string>
    <string name="donation_short_description_prompt">Short Description</string>
    <string name="donation_description_prompt">Full Description</string>
    <string name="donation_value_prompt">Estimated Value (In Dollars)</string>
    <string name="donation_comments_prompt">Additional Comments (Optional)</string>
    <string name="donation_add_button">Add</string>
    <string name="donation_cancel_button">Cancel</string>

    <string name="donation_view_toolbar_text">Donations</string>
    <string name="donation_view_name">Name: %1$s</string>
    <string name="donation_view_short_description">Short Description: %1$s</string>
    <string name="donation_view_description">Description: %1$s</string>
    <string name="donation_view_value">Value: $%1$s</string>
    <string name="donation_view_category">Category: %1$s</string>
    <string name="donation_view_comments">Comments: %1$s</string>
    <string name="donation_view_timestamp">Time: %1$s</string>
    <string name="donation_view_back">Back</string>

    <string name="title_activity_locations_map">Map</string>

    <string name="back_from_map_button">Back</string>

    <string name="donations_search_title">Search Donations</string>
    <string name="donations_search_name">Name</string>
    <string name="donations_search_category">Category:</string>
    <string name="donations_search_location">Location:</string>
    <string name="donations_search_button">Search</string>
    <string name="donations_search_cancel_button">Cancel</string>
</resources>
